create github pages

--- a/assets/mobirise/css/mbr-additional.css
+++ b/assets/mobirise/css/mbr-additional.css
@@ -5655,7 +5655,7 @@ section.lazy-placeholder:after {
   line-height: 1.5;
   width: 100%;
   margin: 0;
-  text-align: center;
+  text-align: right;
 }
 .cid-rWkFvvGuHY .modal-body {
   position: relative;
